feat: canvas responsive

--- a/Mouse-Move-Pixels-Physics/index.html
+++ b/Mouse-Move-Pixels-Physics/index.html
@@ -24,7 +24,7 @@
 
     <div id="btn">WRAP</div>
 
-    <script src="./script.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 
 </html>
