--- a/Basic-Canvas/index.html
+++ b/Basic-Canvas/index.html
@@ -14,7 +14,9 @@
 
     <canvas id="canvas"></canvas>
 
-    <script type="module" src="./assets/js/script.js"></script>
+    <!-- <script type="module" src="./assets/js/script.js"></script> -->
+
+    <script type="module" src="./assets/js/ShapeMove.js"></script>
 
 </body>
 
