feat: add bg layer with paralax effect

--- a/Games/Seahorse/index.html
+++ b/Games/Seahorse/index.html
@@ -14,6 +14,15 @@
 
     <canvas id="canvas"></canvas>
 
+    <!-- environment image's -->
+    <img id="layer1" src="./assets/img/layer1.png" alt="layer1">
+    <img id="layer2" src="./assets/img/layer2.png" alt="layer2">
+    <img id="layer3" src="./assets/img/layer3.png" alt="layer3">
+    <img id="layer4" src="./assets/img/layer4.png" alt="layer4">
+
+    <audio id="audio1" src="./assets/audio/shoot.wav" preload="auto"></audio>
+
+
     <script type="module" src="./assets/js/Canvas.js"></script>
 
 </body>
