feat: player & bullet img add & animate its movement

--- a/Games/Seahorse/index.html
+++ b/Games/Seahorse/index.html
@@ -14,11 +14,17 @@
 
     <canvas id="canvas"></canvas>
 
+    <!-- player -->
+    <img id="player" src="./assets/img/player/player.png" alt="player">
+    <!-- bullet -->
+    <img id="bullet" src="./assets/img/player/bullet.png" alt="bullet">
+
     <!-- environment image's -->
-    <img id="layer1" src="./assets/img/layer1.png" alt="layer1">
-    <img id="layer2" src="./assets/img/layer2.png" alt="layer2">
-    <img id="layer3" src="./assets/img/layer3.png" alt="layer3">
-    <img id="layer4" src="./assets/img/layer4.png" alt="layer4">
+    <img id="layer1" src="./assets/img/bg/layer1.png" alt="layer1">
+    <img id="layer2" src="./assets/img/bg/layer2.png" alt="layer2">
+    <img id="layer3" src="./assets/img/bg/layer3.png" alt="layer3">
+    <img id="layer4" src="./assets/img/bg/layer4.png" alt="layer4">
+
 
     <audio id="audio1" src="./assets/audio/shoot.wav" preload="auto"></audio>
 
