refactor: file & folder structure & add images

--- a/Games/Seahorse/index.html
+++ b/Games/Seahorse/index.html
@@ -25,6 +25,16 @@
     <img id="layer3" src="./assets/img/bg/layer3.png" alt="layer3">
     <img id="layer4" src="./assets/img/bg/layer4.png" alt="layer4">
 
+    <!-- enemies -->
+    <img id="hivewhale" src="./assets/img/enemy/hivewhale.png" alt="hivewhale">
+    <img id="angler1" src="./assets/img/enemy/angler1.png" alt="angler1">
+    <img id="angler2" src="./assets/img/enemy/angler2.png" alt="angler2">
+    <img id="drone" src="./assets/img/enemy/drone.png" alt="drone">
+    <img id="lucky" src="./assets/img/enemy/lucky.png" alt="lucky">
+
+    <!-- gears / particles -->
+    <img id="gears" src="./assets/img/enemy/gears.png" alt="gears">
+
 
     <audio id="audio1" src="./assets/audio/shoot.wav" preload="auto"></audio>
 
