feat: gears animation & refactor

--- a/Games/Seahorse/index.html
+++ b/Games/Seahorse/index.html
@@ -26,7 +26,7 @@
     <img id="layer4" src="./assets/img/bg/layer4.png" alt="layer4">
 
     <!-- enemies -->
-    <img id="hivewhale" src="./assets/img/enemy/hivewhale.png" alt="hivewhale">
+    <img id="hiveWhale" src="./assets/img/enemy/hiveWhale.png" alt="hiveWhale">
     <img id="angler1" src="./assets/img/enemy/angler1.png" alt="angler1">
     <img id="angler2" src="./assets/img/enemy/angler2.png" alt="angler2">
     <img id="drone" src="./assets/img/enemy/drone.png" alt="drone">
