feat: Ctrl+R & loading ui

--- a/Games/Seahorse/index.html
+++ b/Games/Seahorse/index.html
@@ -15,6 +15,8 @@
 <body>
 
     <canvas id="canvas"></canvas>
+    
+    <h1 id="loading">Loading...</h1>
 
     <!-- player -->
     <img id="player" src="./assets/img/player/player.png" alt="player">
