feat: explosion effect add

--- a/Games/Seahorse/index.html
+++ b/Games/Seahorse/index.html
@@ -36,10 +36,12 @@
     <img id="drone" src="./assets/img/enemy/drone.png" alt="drone">
     <img id="lucky" src="./assets/img/enemy/lucky.png" alt="lucky">
 
-    <!-- gears / particles -->
-    <img id="gears" src="./assets/img/enemy/gears.png" alt="gears">
-
-    <audio id="audio1" src="./assets/audio/shoot.wav" preload="auto"></audio>
+    <!-- gears / particles / effects -->
+    <img id="gears" src="./assets/img/effects/gears.png" alt="gears">
+    <img id="smokeExplosion" src="./assets/img/effects/smokeExplosion.png" alt="smoke">
+    <img id="fireExplosion" src="./assets/img/effects/fireExplosion.png" alt="fire">
+    
+    <audio id="shoot" src="./assets/audio/shoot.wav" preload="auto"></audio>
 
     <script type="module" src="./assets/js/Canvas.js"></script>
 
