feat: fire explosion & audio

--- a/Games/Seahorse/index.html
+++ b/Games/Seahorse/index.html
@@ -41,8 +41,8 @@
     <img id="smokeExplosion" src="./assets/img/effects/smokeExplosion.png" alt="smoke">
     <img id="fireExplosion" src="./assets/img/effects/fireExplosion.png" alt="fire">
     
-    <audio id="shoot" src="./assets/audio/shoot.wav" preload="auto"></audio>
-
+    <audio id="shoot" src="./assets/audio/shoot.mp3" preload="auto"></audio>
+    
     <script type="module" src="./assets/js/Canvas.js"></script>
 
 </body>
