refactor: project structure v2

--- a/projects/BoxAnimation/index.html
+++ b/projects/BoxAnimation/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <title>Basic Box Animation</title>
+    <title>Box Animation</title>
 </head>
 
 <body>
