--- a/projects/MouseMoveClick/index.html
+++ b/projects/MouseMoveClick/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="./assets/style.css">
 
-    <title>zTemplate</title>
+    <title>Mouse Move & Click</title>
 </head>
 
 <body>
